<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/fragment_container"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/steps_view_pager"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">

    </android.support.v4.view.ViewPager>
</LinearLayout>